--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ vim/.vim/plugged
 vim/.vim/.netrwhist
 VsCode/.config/**
 !VsCode/.config/**/User/settings.json
-hexchat/.config/hexchat/scrollback/
-hexchat/.config/hexchat/logs/
 nvim/.config/nvim/.netrwhist
 git/.gitconfig
+alacritty-terminal/.config/alacritty/.alacritty.yml.swp
