--- a/alacritty-terminal/.config/alacritty/alacritty.yml
+++ b/alacritty-terminal/.config/alacritty/alacritty.yml
@@ -496,6 +496,12 @@ key_bindings:
   #- { key: Q,      mods: Command, action: Quit             }
   #- { key: W,      mods: Command, action: Quit             }
 
+  - { key: Backslash,  mods: Alt, chars: "\x1b\\"}
+  - { key: Minus,  mods: Alt, chars: "\x1b-"}
+  - { key: H,  mods: Alt, chars: "\x1bh"}
+  - { key: J,  mods: Alt, chars: "\x1bj"}
+  - { key: K,  mods: Alt, chars: "\x1bk"}
+  - { key: L,  mods: Alt, chars: "\x1bl"}
   - { key: Paste, action: Paste }
   - { key: Copy, action: Copy }
   - { key: L, mods: Control, action: ClearLogNotice }
