--- a/alacritty-terminal/.config/alacritty/alacritty.yml
+++ b/alacritty-terminal/.config/alacritty/alacritty.yml
@@ -490,18 +490,22 @@ key_bindings:
   #- { key: Minus,  mods: Command, action: DecreaseFontSize }
   #- { key: K,      mods: Command, action: ClearHistory     }
   #- { key: K,      mods: Command, chars: "\x0c"            }
-  #- { key: V,      mods: Command, action: Paste            }
-  #- { key: C,      mods: Command, action: Copy             }
   #- { key: H,      mods: Command, action: Hide             }
   #- { key: Q,      mods: Command, action: Quit             }
   #- { key: W,      mods: Command, action: Quit             }
 
-  - { key: Backslash,  mods: Alt, chars: "\x1b\\"}
-  - { key: Minus,  mods: Alt, chars: "\x1b-"}
-  - { key: H,  mods: Alt, chars: "\x1bh"}
-  - { key: J,  mods: Alt, chars: "\x1bj"}
-  - { key: K,  mods: Alt, chars: "\x1bk"}
-  - { key: L,  mods: Alt, chars: "\x1bl"}
+ # mac workarounds
+
+  - { key: Backslash,  mods: Command, chars: "\x1b\\"}
+  - { key: Minus,  mods: Command, chars: "\x1b-"}
+  - { key: H,  mods: Command, chars: "\x1bh"}
+  - { key: J,  mods: Command, chars: "\x1bj"}
+  - { key: K,  mods: Command, chars: "\x1bk"}
+  - { key: L,  mods: Command, chars: "\x1bl"}
+  - { key: V,  mods: Command, action: Paste            }
+  - { key: C,  mods: Command, action: Copy             }
+
+# normal keybindings
   - { key: Paste, action: Paste }
   - { key: Copy, action: Copy }
   - { key: L, mods: Control, action: ClearLogNotice }
