--- a/alacritty-terminal/.config/alacritty/alacritty.yml
+++ b/alacritty-terminal/.config/alacritty/alacritty.yml
@@ -502,6 +502,10 @@ key_bindings:
   - { key: J,  mods: Command, chars: "\x1bj"}
   - { key: K,  mods: Command, chars: "\x1bk"}
   - { key: L,  mods: Command, chars: "\x1bl"}
+  - { key: H,  mods: Command|Shift, chars: "\x1bH"}
+  - { key: J,  mods: Command|Shift, chars: "\x1bJ"}
+  - { key: K,  mods: Command|Shift, chars: "\x1bK"}
+  - { key: L,  mods: Command|Shift, chars: "\x1bL"}
   - { key: V,  mods: Command, action: Paste            }
   - { key: C,  mods: Command, action: Copy             }
 
