--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .tmux.conf.swp
 vim/.vim/plugged
 vim/.vim/.netrwhist
-VsCode/.config/**
-!VsCode/.config/**/User/settings.json
+VsCode/**
+!VsCode/**/User/settings.json
 nvim/.config/nvim/.netrwhist
 __pycache__/
 zsh/.zshconfigs/local
