--- a/VsCode/Code/User/settings.json
+++ b/VsCode/Code/User/settings.json
@@ -10,27 +10,48 @@
   },
   "vim.normalModeKeyBindingsNonRecursive": [
     {
-      "before": ["<leader>", "\\"],
-      "commands": ["workbench.action.splitEditorRight"]
+      "before": [
+        "<leader>",
+        "\\"
+      ],
+      "commands": [
+        "workbench.action.splitEditorRight"
+      ]
     },
     {
-      "before": ["<leader>", "-"],
-      "commands": ["workbench.action.splitEditorDown"]
+      "before": [
+        "<leader>",
+        "-"
+      ],
+      "commands": [
+        "workbench.action.splitEditorDown"
+      ]
     }
   ],
   "vim.visualModeKeyBindingsNonRecursive": [
     {
-      "before": [">"],
-      "commands": ["editor.action.indentLines"]
+      "before": [
+        ">"
+      ],
+      "commands": [
+        "editor.action.indentLines"
+      ]
     },
     {
-      "before": ["<"],
-      "commands": ["editor.action.outdentLines"]
+      "before": [
+        "<"
+      ],
+      "commands": [
+        "editor.action.outdentLines"
+      ]
     }
   ],
   "window.zoomLevel": 0,
   "editor.fontFamily": "'Hack', 'Source Code Variable'",
-  "python.formatting.blackArgs": ["--line-length", "79"],
+  "python.formatting.blackArgs": [
+    "--line-length",
+    "79"
+  ],
   "emmet.includeLanguages": {
     "django-html": "html"
   },
@@ -39,17 +60,25 @@
   "python.analysis.logLevel": "Trace",
   "window.titleBarStyle": "custom",
   "workbench.iconTheme": "vs-minimal",
-  "python.linting.pycodestyleArgs": ["--ignore=W503"],
+  "python.linting.pycodestyleArgs": [
+    "--ignore=W503"
+  ],
   "python.sortImports.path": "isort",
   "explorer.confirmDelete": false,
   "[html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "eslint.options": {
-    "extensions": [".js", ".vue"]
+    "extensions": [
+      ".js",
+      ".vue"
+    ]
   },
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[terraform]": {
+    "editor.formatOnSave": true
   },
   "workbench.colorTheme": "Visual Studio Light",
   "terminal.integrated.fontFamily": "monospace"
