Hightlights active pane in line with statusbar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -73,6 +73,32 @@ bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 # Design 
 
+##### solarized
+
+#
+### Status Bar
+#### updating interval
+set -g status-interval 10
+
+#### status line position
+set -g status-position bottom
+
+#### status line colours
+set -g status-bg colour222
+set -g status-fg colour232
+
+set-option -g status-left "#[fg=colour241, bg=colour117] #S #[fg=colour241, bg=colour117, nobold, noitalics, nounderscore] > "
+set-option -g status-right "#[fg=colour239, bg=colour117, nobold, nounderscore, noitalics] #[fg=colour241,bg=colour117] %Y-%m-%d - %H:%M #[fg=colour241, bg=colour132, nobold, noitalics, nounderscore]  #[fg=colour237, bg=colour132, bold] #h "
+
+#### position of windows
+##### centre, will be off depending on left size 
+#set -g status-justify centre
+set -g status-justify left
+
+set-option -g pane-active-border-style "fg=colour132,bg=colour222"
+
+
+
 #### GRUVBOX DARK
 # set-option -g status "on"
 
@@ -98,28 +124,6 @@ bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 # set-window-option -g window-status-current-format "#[fg=colour239, bg=colour248, :nobold, noitalics, nounderscore]#[fg=colour239, bg=colour214] #I #[fg=colour239, bg=colour214, bold] #W #[fg=colour214, bg=colour237, nobold, noitalics, nounderscore]"
 # set-window-option -g window-status-format "#[fg=colour237,bg=colour239,noitalics]#[fg=colour223,bg=colour239] #I #[fg=colour223, bg=colour239] #W #[fg=colour239, bg=colour237, noitalics]"
-
-##### GRUVBOX LIGHT
-#
-### Status Bar
-#### updating interval
-set -g status-interval 10
-
-#### status line position
-set -g status-position bottom
-
-#### status line colours
-set -g status-bg colour222
-set -g status-fg colour232
-
-set-option -g status-left "#[fg=colour241, bg=colour117] #S #[fg=colour241, bg=colour117, nobold, noitalics, nounderscore] > "
-set-option -g status-right "#[fg=colour239, bg=colour117, nobold, nounderscore, noitalics] #[fg=colour241,bg=colour117] %Y-%m-%d - %H:%M #[fg=colour241, bg=colour132, nobold, noitalics, nounderscore]  #[fg=colour237, bg=colour132, bold] #h "
-
-
-#### position of windows
-##### centre, will be off depending on left size 
-#set -g status-justify centre
-set -g status-justify left
 
 
 
