adds kill-pane for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -64,6 +64,7 @@ bind -n -r M-L resize-pane -R 10
 
 ## bind Q to kill window
 bind-key Q confirm kill-window
+bind-key q confirm kill-pane
 
 ## vi copying in copy mode
 bind-key -T copy-mode-vi v send-keys -X begin-selection
