Integrates tmux and vim to work in conjunction. Tmux for movement and auto opening vim in new panes

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .tmux.conf.swp
-vim/.vim/plugged
-vim/.vim/.netrwhist
-nvim/.config/nvim/.netrwhist
+.netrwhist
+.netrwbook
 __pycache__/
 zsh/.zshconfigs/local
 VsCode/**
