--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,7 +7,7 @@ set-option -g allow-rename off
 set -sg escape-time 1
 
 ## source .tmux.conf as suggested in `man tmux` with R
-bind R source ~/.tmux.conf
+bind r source ~/.tmux.conf
 
 ## clock to 25
 setw -g clock-mode-style 24
@@ -19,14 +19,12 @@ set -g history-limit 2000
 set-option -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 
-
 ## start windows and panes at index 1 and not 0
 set -g base-index 1
 setw -g pane-base-index 1
 
 ## set vi keys
 setw -g mode-keys vi
-
 
 # User bindings
 
@@ -44,8 +42,9 @@ unbind-key Down
 
 ## better mnemonics for splitting panes!
 
-bind -n M-\\ split-window -h -c "#{pane_current_path}"
-bind -n M-- split-window -v -c "#{pane_current_path}"
+bind -n M-\\ run 'zsh ~/scripts/vim-tmux-move.sh -h'
+bind -n M-- run 'zsh ~/scripts/vim-tmux-move.sh -v'
+
 bind -n M-c new-window -c "#{pane_current_path}"
 
 ## vim style bindings for pane movement
@@ -68,9 +67,8 @@ bind-key q confirm kill-pane
 
 ## vi copying in copy mode
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "copy"
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
-
 
 # Design 
 
@@ -97,63 +95,4 @@ set-option -g status-right "#[fg=colour239, bg=colour117, nobold, nounderscore, 
 set -g status-justify left
 
 set-option -g pane-active-border-style "fg=colour132,bg=colour222"
-
-
-
-#### GRUVBOX DARK
-# set-option -g status "on"
-
-# # default statusbar colors
-# set-option -g status-bg colour237 #bg1
-# set-option -g status-fg colour223 #fg1
-
-
-# # pane number display
-# set-option -g display-panes-active-colour colour250 #fg2
-# set-option -g display-panes-colour colour237 #bg1
-
-# # clock
-# set-window-option -g clock-mode-colour colour109 #blue
-
-# # bell
-# set-window-option -g window-status-bell-style fg=colour235,bg=colour167 #bg, red
-
-
-
-# set-option -g status-left "#[fg=colour248, bg=colour241] #S #[fg=colour241, bg=colour237, nobold, noitalics, nounderscore]"
-# set-option -g status-right "#[fg=colour239, bg=colour237, nobold, nounderscore, noitalics]#[fg=colour246,bg=colour239] %Y-%m-%d  %H:%M #[fg=colour248, bg=colour239, nobold, noitalics, nounderscore]#[fg=colour237, bg=colour248] #h "
-
-# set-window-option -g window-status-current-format "#[fg=colour239, bg=colour248, :nobold, noitalics, nounderscore]#[fg=colour239, bg=colour214] #I #[fg=colour239, bg=colour214, bold] #W #[fg=colour214, bg=colour237, nobold, noitalics, nounderscore]"
-# set-window-option -g window-status-format "#[fg=colour237,bg=colour239,noitalics]#[fg=colour223,bg=colour239] #I #[fg=colour223, bg=colour239] #W #[fg=colour239, bg=colour237, noitalics]"
-
-
-
-### OCEANIC NEXT
-#
-### Status Bar
-#### updating interval
-#set -g status-interval 10
-#
-#### status line position
-#set -g status-position bottom
-#
-#### status line colours
-#set -g status-bg colour235
-#set -g status-fg colour137
-#set -g status-attr dim
-#
-#### Left side
-#set -g status-left '#[fg=colour15,bg=colour33,bold][Current Session: #S | #H] '
-#set -g status-left-length 50
-#
-#
-#### position of windows
-##### centre, will be off depending on left size 
-##set -g status-justify centre
-#set -g status-justify left
-#
-#
-#### Right side
-#set -g status-right '#[fg=colour242,bg=colour3,bold] %d/%m/%y  #[fg=colour15,bg=colour88,bold] %H:%M:%S '
-#set -g status-right-length 50
 
