Reverts tmux and vim coupling.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -42,9 +42,8 @@ unbind-key Down
 
 ## better mnemonics for splitting panes!
 
-bind -n M-\\ run 'zsh ~/scripts/vim-tmux-move.sh -h'
-bind -n M-- run 'zsh ~/scripts/vim-tmux-move.sh -v'
-
+bind -n M-\\ split-window -h -c '#{pane_current_command}'
+bind -n M-- split-window -v -c '#{pane_current_command}'
 bind -n M-c new-window -c "#{pane_current_path}"
 
 ## vim style bindings for pane movement
